kubernetes/mini/core/storage/minio/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: apps-to-minio
spec:
  description: "Allow apps to access minio on S3 port"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: minio
      io.kubernetes.pod.namespace: storage

  ingress:
    - fromEndpoints:
        - matchLabels:
            storage.home.arpa/s3: allow
      toPorts:
        - ports:
            - port: "9001"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/instance: nginx-internal
            io.kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
